--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.9.0"
+    "react-icons": "^4.9.0",
+    "sass": "^1.63.3"
   },
   "devDependencies": {
     "eslint": "8.42.0",
