--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "sass": "^1.63.3"
+    "react-slick": "^0.29.0",
+    "sass": "^1.63.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "8.42.0",
